@@ -1,4 +1,0 @@
-from venusian.tests.fixtures import decorator
-
-decoone = decorator
-decotwo = decorator
